--- a/ApiRest/package.json
+++ b/ApiRest/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "memory-cache": "^0.2.0",
     "mssql": "^5.1.0"
   }
 }
